	* configs/stm3240g-eval/include/board.h:  Input frequences wrong for all but
	  one APB2 timer.
	* arch/mips/src/pic32mx/pic32mx-ethernet.c:  The PIC32 Ethernet driver is
	  code complete, but still untested.
	* confgs/sim/*/Make.defs and arch/sim/src/Makefile:  Add support for building
	  a 32-bit executable on a 64-bit Linux target.
	* configs/sure-pic32mx/src/up_leds.c:  Correct GPIOs used for LEDs. The wrong
	  pins were being used.
	* arch/arm/src/stm32/chip/stm32f10xxx_gpio.h: Correct offset to one AFIO EXICR
	  register.
	* arch/arm/src/lpc17xx/lpc17_can.c:  Added "advanced" configuration options
	  to specify the CAN TSEG1 and TSEG2 clock counts specifically.
	* include/nuttx/can.h and drivers/can.c:  Add support for extended (29-bit)
	  CAN IDs.
	* arch/arm/src/lpc17xx/lpc17_can.c:  Add support for extended (29-bit) CAN IDs.
	* arch/arm/src/stm32/stm32_can.c:  Add support for extended (29-bit) CAN IDs.
	* include/nuttx/power/pm.h:  Move include/nuttx/pm.h into a sub-directory named
	  power.
	* drivers/power:  Rename the drivers/pm directory to power
	* include/power/battery.h and drivers/battery.c:  Add the interface definitions
	  for an upper and lower half battery driver.  Add the implementation of the
	  common upper half battery driver.
	* drivers/power/max1704x.c:  Add a driver for MAX17040x battery "fuel guage"
	* arch/arm/src/stm32/stm32_i2c.c: Add support for I2C3
	* drivers/usbdev/: Lots of name changes: cdc_serial->cdcacm, usbstrg->usbmsc, 
	  usbser->pl2303
	* drivers/usbdev/composite: Fleshed out support for a composite USB device.
	* drivers/stm3210e-eval/composite and drivers/stm3210e-eval/src/up_composite.c:
	  Add a configuration test the USB composite device.
	* include/nuttx/usb/usb.h, drivers/usbdev/composite_descriptors.c, and
	  drivers/usbdev/cdcacm_descriptors.c:  Add support for the USB Interface
          Association Descriptor (IAD)
	* arch/arm/src/stm32/stm32_i2c.c: Correct a typo in STM32 I2C3 support